# pet-project-agent

./: .env.example  .gitignore  README.md  REFLECTION.md  main.py  pyproject.toml
data/: skills_catalog.csv  skills_catalog_portfolio_ai.csv
docs/: modules.md  Тестовое_Весенняя школа.md
pet_project_agent/: main.py  settings.py
pet_project_agent/application/: agent_orchestrator.py  recommend_pet_projects.py  response_renderer.py  routing_rules.py  tool_executor.py  tool_router.py
pet_project_agent/contexts/github_research/: tool.py
pet_project_agent/contexts/hn_research/: tool.py
pet_project_agent/contexts/ideation/: service.py
pet_project_agent/contexts/profile/: service.py  tool.py
pet_project_agent/contexts/research/: service.py
pet_project_agent/domain/: models.py  ports.py
pet_project_agent/infrastructure/data/: skill_catalog_repository.py
pet_project_agent/infrastructure/github/: client.py
pet_project_agent/infrastructure/hackernews/: client.py
pet_project_agent/infrastructure/llm/: ollama_client.py
pet_project_agent/knowledge/: base.py  registry.toml
pet_project_agent/presentation/: cli.py
tests/: test_integration_pipeline.py  test_profile_service.py  test_routing_rules.py  test_tool_executor.py  test_tool_router.py
